--- a/feature-gpt3/src/main/res/layout/gpt3_fragment.xml
+++ b/feature-gpt3/src/main/res/layout/gpt3_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -18,13 +17,17 @@
             android:id="@+id/rvChat"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/input_container"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/input_container" />
+            app:reverseLayout="true" />
 
         <ProgressBar
             android:id="@+id/progress_circular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/rvChat"
             app:layout_constraintEnd_toEndOf="@+id/rvChat"
             app:layout_constraintStart_toStartOf="@+id/rvChat"
