--- a/feature-gpt3/src/main/res/layout/gpt3_fragment.xml
+++ b/feature-gpt3/src/main/res/layout/gpt3_fragment.xml
@@ -43,9 +43,13 @@
                 android:id="@+id/message"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
                 android:hint="Escribe tu mensaje aquí"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/cleanChat"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/send_button" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/send_button"
@@ -54,6 +58,17 @@
                 android:src="@android:drawable/ic_menu_send"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
+
+            <ImageView
+                android:id="@+id/cleanChat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:src="@android:drawable/ic_menu_close_clear_cancel"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/send_button"
+                app:layout_constraintEnd_toStartOf="@+id/send_button"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
