bottom navigation printing items

--- a/feature-home/src/main/res/layout/fragment_sermon_generator.xml
+++ b/feature-home/src/main/res/layout/fragment_sermon_generator.xml
@@ -9,12 +9,14 @@
         tools:context=".ui.home.HomeFragment">
 
         <TextView
-            android:id="@+id/text_home"
+            android:id="@+id/text_sermon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:text="Crear Sermon"
             android:textAlignment="center"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
