funciona navigation bottom with flab

--- a/feature-home/src/main/res/menu/bottom_nav_menu.xml
+++ b/feature-home/src/main/res/menu/bottom_nav_menu.xml
@@ -10,6 +10,14 @@
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
+    <item
+        android:id="@+id/placeholder"
+        android:title="" />
+
+    <item
+        android:id="@+id/navigation_sermon_transcription"
+        android:icon="@android:drawable/ic_btn_speak_now"
+        android:title="@string/title_sermon_transcription" />
 
     <item
         android:id="@+id/navigation_notifications"
