--- a/feature-home/src/main/res/layout/activity_home.xml
+++ b/feature-home/src/main/res/layout/activity_home.xml
@@ -6,6 +6,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/amulet"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <fragment
             android:id="@+id/nav_host_fragment_activity_main"
@@ -33,6 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="16dp"
+                app:itemIconTint="@color/amulet"
+                app:itemTextColor="@color/black"
                 android:background="@android:color/transparent"
                 app:menu="@menu/bottom_nav_menu" />
 
@@ -42,6 +52,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/FabButton"
             android:contentDescription="add sermon"
             android:src="@android:drawable/ic_menu_add"
             app:layout_anchor="@id/bottomAppBar" />
