--- a/resource/src/main/res/values/colors.xml
+++ b/resource/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_light">#b2fab4</color>
+    <color name="moss_green">#a5d6a7</color>
+    <color name="amulet">#75a478</color>
 </resources>
